gengo/grammar.txt
#######################
#   CURRENT VERSION   #
#######################

expr		: (KEYWORD:TYPE)? IDENTIFIER EQ expr
			: comp-expr

comp-expr	: arith-expr ((AND|OR|EQEQ|GT|GTE|LT|LTE) arith-expr)*

arith-expr	: term ((PLUS|MINUS) term)*

term		: factor ((MUL|DIV) factor)*

factor		: INT|FLOAT|IDENTIFIER
			: (PLUS|MINUS) factor
			: LPAREN comp-expr RPAREN
			: NOT comp-expr
